@@ -10,3 +10,4 @@ Bug fixes:
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Set comment graph synchronous
+- Use adapters when manipulating discussable items
